[gd_scene load_steps=10 format=3 uid="uid://054muqtx37p3"]

[ext_resource type="Script" path="res://systems/attachment system/Scripts/CreatureCreator.gd" id="1_ahjc5"]
[ext_resource type="Script" path="res://systems/attachment system/Scripts/LineTracker.gd" id="3_3v5u3"]
[ext_resource type="Script" path="res://systems/attachment system/Scripts/MouseTracker.gd" id="3_dgbmd"]
[ext_resource type="Texture2D" uid="uid://4mylvmah0i61" path="res://addons/attachmentgui/Sprites/platform.png" id="3_svr8h"]
[ext_resource type="Script" path="res://systems/attachment system/Scripts/AttachmentTracker.gd" id="4_0b8n6"]
[ext_resource type="Script" path="res://systems/attachment system/Scripts/EntityTracker.gd" id="5_5eww6"]
[ext_resource type="Texture2D" uid="uid://bes8uahpoe1he" path="res://addons/attachmentgui/Sprites/bg.png" id="6_bkra6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvgow"]
size = Vector2(123, 22)

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_gob83"]

[node name="CreatureCreator" type="Node2D" node_paths=PackedStringArray("creature_skeleton", "m_tracker", "line_tracker", "attachment_tracker", "entity_tracker", "component_node")]
script = ExtResource("1_ahjc5")
creature_skeleton = NodePath("Skeleton")
m_tracker = NodePath("MouseTracker")
line_tracker = NodePath("LineTracker")
attachment_tracker = NodePath("AttachmentTracker")
entity_tracker = NodePath("EntityTracker")
component_node = NodePath("Skeleton/Components")
metadata/_edit_lock_ = true

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.776471, 0.776471, 0.776471, 0.392157)
texture = ExtResource("6_bkra6")
metadata/_edit_lock_ = true

[node name="PlatformSprite" type="Sprite2D" parent="."]
modulate = Color(0.77084, 0.770839, 0.770839, 1)
position = Vector2(-1, 50)
texture = ExtResource("3_svr8h")
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="PlatformSprite"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSprite/StaticBody2D"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_kvgow")

[node name="MouseTracker" type="Node" parent="."]
script = ExtResource("3_dgbmd")

[node name="LineTracker" type="Node" parent="."]
script = ExtResource("3_3v5u3")

[node name="AttachmentTracker" type="Node" parent="." node_paths=PackedStringArray("skeleton")]
script = ExtResource("4_0b8n6")
skeleton = NodePath("../Skeleton")

[node name="EntityTracker" type="Node" parent="."]
script = ExtResource("5_5eww6")

[node name="Skeleton" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_gob83")
metadata/_edit_lock_ = true

[node name="Components" type="Node" parent="Skeleton"]
